--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .AppComp{
-    background-image: url("https://image.shutterstock.com/image-photo/abstract-geometric-paper-background-saturated-260nw-1713631516.jpg");
+    background-image: url("https://images.unsplash.com/photo-1475070929565-c985b496cb9f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80");
     position: fixed;
     min-width: 100%;
     min-height: 100%;
